--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,24 @@
 site_name: Laskewitz.io
 theme:
   name: material
+  features:
+    - content.code.annotate
+    # - content.tabs.link
+    - content.tooltips
+    # - header.autohide
+    # - navigation.expand
+    - navigation.indexes
+    # - navigation.instant
+    # - navigation.prune
+    - navigation.sections
+    - navigation.tabs
+    # - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+    # - toc.integrate  
+markdown_extensions:
+  - tables
