--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,4 +2,6 @@ site_name: Laskewitz.io
 theme:
   name: material
   palette:
-    primary: indigo
+    primary: blue
+  features:
+    - navigation.tabs
