--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,3 +5,16 @@ theme:
     primary: blue
   features:
     - navigation.tabs
+plugins:
+  - meta
+  - blog:
+      blog_dir: .
+      post_date_format: long
+      post_url_format: '{date}-{slug}'
+  - search
+  - tags
+nav:
+  - Home:
+      - index.md
+  - Power Platform Connectors: 'connectors/index.md'
+  - About: 'about.md'
