--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,41 @@
 site_name: Laskewitz.io
 theme:
   name: material
+  features:
+    # - announce.dismiss
+    - content.code.annotate
+    # - content.tabs.link
+    - content.tooltips
+    # - header.autohide
+    # - navigation.expand
+    - navigation.indexes
+    # - navigation.instant
+    # - navigation.prune
+    - navigation.sections
+    - navigation.tabs
+    # - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+    # - toc.integrate
+  font:
+    text: Roboto
+    code: Roboto Mono
   palette:
     primary: blue
-  features:
-    - navigation.tabs
 plugins:
+  - meta
   - search
   - social
   - tags
 nav:
-  - Home: 'index.md'
-  - Blog: 'blog/index.md'
+  - Blog:
+      - 'index.md'
+      - '2022':
+          - posts/hello-world.md
   - Tools:
       - Power Platform Connectors: 'connectors/index.md'
+  - About: 'about.md'
