--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,10 @@ theme:
     code: Roboto Mono
   palette:
     primary: blue
+extra:
+  analytics:
+    provider: google
+    property: !ENV GOOGLE_ANALYTICS_KEY
 plugins:
   - meta
   - search
