--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,36 @@
-site_name: My Docs
+site_name: Daniel Laskewitz
+theme:
+  name: material
+  custom_dir: overrides
+  features:
+    - navigation.expand
+    - navigation.indexes
+    - navigation.instant
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
+    - navigation.tracking
+    - content.tabs.link
+    - toc.integrate
+  palette:
+    primary: white
+nav:
+  - Home: 'index.md'
+  - Tools: 'tools.md'
+  - About: 'about.md'
+markdown_extensions:
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - toc:
+      permalink: true
+extra:
+  generator: false
+  social:
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/laskewitz
+    - icon: fontawesome/brands/github
+      link: https://github.com/laskewitz
+    - icon: fontawesome/brands/linkedin
+      link: https://linkedin.com/in/laskewitz
