--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ theme:
     - navigation.top
     - navigation.tracking
     - content.tabs.link
+    - toc.follow
     - toc.integrate
   palette:
     primary: white
