--- a/docs/.authors.yml
+++ b/docs/.authors.yml
@@ -1,4 +1,4 @@
 laskewitz:
   name: Daniel laskewitz
-  description: Power Platform Advocate @ Microsoft
+  description: Developer Advocate
   avatar: https://github.com/laskewitz.png
