--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,11 +37,13 @@ markdown_extensions:
 extra:
   generator: false
   social:
-    - icon: fontawesome/brands/twitter
+    - icon: material/youtube
+      link: https://youtube.com/daniellaskewitz
+    - icon: material/twitter
       link: https://twitter.com/laskewitz
-    - icon: fontawesome/brands/github
+    - icon: material/github
       link: https://github.com/laskewitz
-    - icon: fontawesome/brands/linkedin
+    - icon: material/linkedin
       link: https://linkedin.com/in/laskewitz
 plugins:
   - search
