--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
+  - tables
   - toc:
       permalink: true
 extra:
