--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,8 @@ markdown_extensions:
 extra:
   generator: false
   social:
+    - icon: material/rss
+      link: https://laskewitz.io/feed_rss_created.xml
     - icon: material/youtube
       link: https://youtube.com/daniellaskewitz
     - icon: material/twitter
@@ -54,5 +56,9 @@ plugins:
       blog_dir: .
       authors_file: .authors.yml
   - social
+  - rss:
+      match_path: posts/.*
+      categories:
+        - categories
 extra_css:
   - stylesheets/extra.css
