--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,13 @@ extra:
       link: https://github.com/laskewitz
     - icon: material/linkedin
       link: https://linkedin.com/in/laskewitz
+  consent:
+    title: Cookie consent
+    description: >-
+      I use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of my site and whether users
+      find what they're searching for. With your consent, you're helping me to
+      make my site better.
 plugins:
   - search
   - meta
