--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,5 +67,7 @@ plugins:
       match_path: posts/.*
       categories:
         - categories
+      date_from_meta:
+        as_creation: date
 extra_css:
   - stylesheets/extra.css
