Changed plugin name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,7 @@ extra:
       make my site better.
 plugins:
   - search
-  - meta
+  - material/meta
   - blog:
       blog_dir: .
       authors_file: .authors.yml
