--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ theme:
     - navigation.expand
     - navigation.indexes
     - navigation.instant
+    - navigation.path   
     - navigation.sections
     - navigation.tabs
     - navigation.tabs.sticky
